--- a/requirements-lite.txt
+++ b/requirements-lite.txt
@@ -1,6 +1,6 @@
 # Docker Web-only deployment (no ASR engine, no GPU)
 # 对应 pyproject.toml 的 [project].dependencies (不含 optional-dependencies)
-# 如需自动生成: uv pip compile pyproject.toml --no-extras -o requirements-lite.txt
+# 如需自动生成: uv pip compile pyproject.toml -o requirements-lite.txt
 fastapi>=0.128.0
 uvicorn>=0.40.0
 python-multipart>=0.0.21
